debian/module/debian/rules: fix the clean: target to find the kernel config
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@944 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   [ Andreas Beckmann ]
   * ship missing symlink /usr/lib/tls/libnvidia-tls.so.1
   * bug-control: report package-status: linux-headers-2.6
+  * debian/module/debian/rules: fix the clean: target to find the kernel
+    config
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
