nvidia-kernel-source.README.Debian: clarify and add m-a debug hint
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@945 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * bug-control: report package-status: linux-headers-2.6
   * debian/module/debian/rules: fix the clean: target to find the kernel
     config
+  * nvidia-kernel-source.README.Debian: clarify and add m-a debug hint
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
