debian/rules: use DEB_HOST_ARCH instead of DEB_BUILD_ARCH
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@946 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * debian/module/debian/rules: fix the clean: target to find the kernel
     config
   * nvidia-kernel-source.README.Debian: clarify and add m-a debug hint
+  * debian/rules: use DEB_HOST_ARCH instead of DEB_BUILD_ARCH
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
