--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * debian/rules: use DEB_HOST_ARCH instead of DEB_BUILD_ARCH
   * bump nvidia-kernel-common versioned dependency to 20100522
   * debian/changelog: update packaging copyright, use gpl2+
+  * debian/control: add Conflicts: ccache (<< 3.0~) (closes: #582748)
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
