--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * bump nvidia-kernel-common versioned dependency to 20100522
   * debian/changelog: update packaging copyright, use gpl2+
   * debian/control: add Conflicts: ccache (<< 3.0~) (closes: #582748)
+    (an alternate solution would be setting CCACHE_DISABLE=1)
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
