--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,9 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * debian/changelog: update packaging copyright, use gpl2+
   * debian/control: add Conflicts: ccache (<< 3.0~) (closes: #582748)
     (an alternate solution would be setting CCACHE_DISABLE=1)
+  * nvidia-glx: add Pre-Depends: dpkg (>= 1.15.7.2)
+  * nvidia-glx: switch to dpkg-maintscript-helper for removal of obsolete
+    config file /etc/default/nvidia-glx
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
