--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * nvidia-glx: add Pre-Depends: dpkg (>= 1.15.7.2)
   * nvidia-glx: switch to dpkg-maintscript-helper for removal of obsolete
     config file /etc/default/nvidia-glx
+  * nvidia-glx: work around dpkg-divert bug #581544: useless errors on not
+    writable destination if source does not exist
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
