--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
     writable destination if source does not exist
   * update watch file magic, add legacy support, upcoming upstream renames
   * update get-orig-source: target for upcoming upstream renames
+  * debian/control: reformat and synchronize descriptions
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
