add NEWS entry about X display manager startup timeouts and give hints where to increase the default timeouts
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@973 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * update watch file magic, add legacy support, upcoming upstream renames
   * update get-orig-source: target for upcoming upstream renames
   * debian/control: reformat and synchronize descriptions
+  * add NEWS entry about X display manager startup timeouts and give hints
+    where to increase the default timeouts
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
