add/update old NEWS entries about the legacy drivers
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@974 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * debian/control: reformat and synchronize descriptions
   * add NEWS entry about X display manager startup timeouts and give hints
     where to increase the default timeouts
+  * add/update old NEWS entries about the legacy drivers
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
