--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * add/update old NEWS entries about the legacy drivers
   * stop creating/removing /usr/lib/libGL.so in the maintainer scripts and the
     init script (closes: #422002, #546210)
+  * nvidia-glx{,-ia32}: ship (possibly dangling) /usr/lib{,32}/libGL.so
+    symlink pointing to the diverted libGL.so.1.2 from libgl1-mesa-glx
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
