--- a/debian/changelog
+++ b/debian/changelog
@@ -41,7 +41,9 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
     to explicitly compile with the NVIDIA headers use -I/usr/include/nvidia
   * remove the now function-less /etc/init.d/nvidia-glx script
   * nvidia-glx.prerm, nvidia-glx-dev.postrm: drop empty maintainer scripts
-  * nvidia-glx{,-ia32}: add symbols control files
+  * nvidia-glx{,-ia32}: add symbols control files and drop .shlibs files,
+    accidental linking with libGL.so.1 from NVIDIA is prevented in a different
+    way
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
