nvidia-glx-dev: rewrite description and only recommend libgl1-mesa-dev
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@988 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,9 +34,10 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * nvidia-glx-{dev,ia32}: ship /usr/lib{,32}/nvidia/libGL.so, allowing
     explicit linking with the NVIDIA OpenGL implementation via
     ... -L/usr/lib/nvidia -lGL ...
-  * nvidia-glx-dev: install headers into /usr/include/nvidia/GL and depend on
-    libgl1-mesa-dev | libgl-dev instead of conflicting with it
-    (closes: #278256, #370542, #552388)
+  * nvidia-glx-dev: install headers into /usr/include/nvidia/GL and recommend
+    libgl1-mesa-dev | libgl-dev instead of conflicting with it; rewrite long
+    description and advise to install libgl1-mesa-dev for building portable
+    OpenGL applications (closes: #278256, #370542, #552388)
   * compiling OpenGL applications will use the MESA implementation by default,
     to explicitly compile with the NVIDIA headers use -I/usr/include/nvidia
   * remove the now function-less /etc/init.d/nvidia-glx script
