--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * nvidia-glx{,-ia32}: add symbols control files and drop .shlibs files,
     accidental linking with libGL.so.1 from NVIDIA is prevented in a different
     way
+  * nvidia-glx: add Conflicts: fglrx-glx
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
