--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
     accidental linking with libGL.so.1 from NVIDIA is prevented in a different
     way
   * nvidia-glx: add Conflicts: fglrx-glx
+  * overhaul maintainer scripts
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
