provide /usr/share/xserver-xorg/pci/nvidia.ids
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1041 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
     way
   * nvidia-glx: add Conflicts: fglrx-glx
   * overhaul maintainer scripts
+  * nvidia-glx: add /usr/share/xserver-xorg/pci/nvidia.ids (closes: #483821)
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
