debian/control: use new nvidia:Legacy and nvidia:LegacyDesc substvars
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1050 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
     (closes: #516379, #576295)
   * nvidia-glx.README.Debian: add a note about XvMC (closes: #390932)
   * rename XF86Config.sample to xorg.conf.sample (closes: #392243)
+  * debian/control: use new nvidia:Legacy and nvidia:LegacyDesc substvars
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
