* libnvidia-compiler1{,-ia32}: ship the libnvidia-compiler.so symlink,   libcuda1 uses this name to dlopen the compiler library
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1052 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -56,6 +56,8 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * nvidia-glx.README.Debian: add a note about XvMC (closes: #390932)
   * rename XF86Config.sample to xorg.conf.sample (closes: #392243)
   * debian/control: use new nvidia:Legacy and nvidia:LegacyDesc substvars
+  * libnvidia-compiler1{,-ia32}: ship the libnvidia-compiler.so symlink,
+    libcuda1 uses this name to dlopen the compiler library
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
