* nvidia-opencl-icd{,-ia32}: recommend libnvidia-compiler1{,-ia32}
opencl applications might compile their opencl source on-the-fly


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1053 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -58,6 +58,7 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * debian/control: use new nvidia:Legacy and nvidia:LegacyDesc substvars
   * libnvidia-compiler1{,-ia32}: ship the libnvidia-compiler.so symlink,
     libcuda1 uses this name to dlopen the compiler library
+  * nvidia-opencl-icd{,-ia32}: recommend libnvidia-compiler1{,-ia32}
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
