--- a/debian/changelog
+++ b/debian/changelog
@@ -59,6 +59,8 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * libnvidia-compiler1{,-ia32}: ship the libnvidia-compiler.so symlink,
     libcuda1 uses this name to dlopen the compiler library
   * nvidia-opencl-icd{,-ia32}: recommend libnvidia-compiler1{,-ia32}
+  * use generic download URLs pointing to the directories, not the files
+    itself, remove placeholder substitution for URL_X86, URL_X86_64
 
  -- Russ Allbery <rra@debian.org>  Wed, 26 May 2010 07:19:43 -0700
 
