Avoid needless ldconfig calls in nvidia-vdpau-driver
* Tell dh_makeshlibs that the loadable vdpau driver in /usr/lib/vdpau
  isn't a traditional shared library so that it doesn't unnecessarily
  add the ldconfig calls to the maintainer scripts.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1106 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
     behavior with handling architecture-specific packages.
   * nvidia-glx now provides xserver-xorg-video-6 so that a user can remove
     the other video drivers if they chose.
+  * Tell dh_makeshlibs that the loadable vdpau driver in /usr/lib/vdpau
+    isn't a traditional shared library so that it doesn't unnecessarily
+    add the ldconfig calls to the maintainer scripts.
 
   [ Andreas Beckmann ]
   * ship missing symlink /usr/lib/tls/libnvidia-tls.so.1
