Override Lintian warning about the nvidia-glx SONAME name mismatch
* Add Lintian override for the mismatch between the nvidia-glx package
  name and the SONAMEs of the libraries it includes.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1107 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ nvidia-graphics-drivers (195.36.24-3) UNRELEASED; urgency=low
   * Tell dh_makeshlibs that the loadable vdpau driver in /usr/lib/vdpau
     isn't a traditional shared library so that it doesn't unnecessarily
     add the ldconfig calls to the maintainer scripts.
+  * Add Lintian override for the mismatch between the nvidia-glx package
+    name and the SONAMEs of the libraries it includes.
 
   [ Andreas Beckmann ]
   * ship missing symlink /usr/lib/tls/libnvidia-tls.so.1
