--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (195.36.24-4) unstable; urgency=low
+
+  * Remove the conflicts with ccache in nvidia-kernel-source and
+    nvidia-kernel-dkms and instead set CCACHE_DISABLE in the environment
+    when doing a module build.  (Closes: #582748)
+
+ -- Russ Allbery <rra@debian.org>  Sun, 13 Jun 2010 19:50:11 -0700
+
 nvidia-graphics-drivers (195.36.24-3) unstable; urgency=low
 
   [ Russ Allbery ]
