--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+  * New upstream release.
+    - Drop patch NVIDIA_kernel-195.36.24-682377.diff, now included.
+  * Update nvidia.ids.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 23 Jun 2010 08:33:44 +0200
+
 nvidia-graphics-drivers (195.36.24-4) unstable; urgency=low
 
   * Remove the conflicts with ccache in nvidia-kernel-source and
