--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
   * New upstream release.
     - Drop patch NVIDIA_kernel-195.36.24-682377.diff, now included.
   * Update nvidia.ids.
+  * Add /usr/share/X11/xorg.conf.d/99-nvidia-glx.conf for autoconfiguration of
+    Xorg in single-GPU setups.  (Closes: #586502)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 23 Jun 2010 08:33:44 +0200
 
