--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,8 @@ nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
   * Update nvidia.ids.
   * Add /usr/share/X11/xorg.conf.d/99-nvidia-glx.conf for autoconfiguration of
     Xorg in single-GPU setups.  (Closes: #586502)
-  * Split the nvidia-glx package, move the runtime libraries to nvidia-libgl1.
-    (Closes: #369316)
+  * Split the nvidia-glx{,-ia32} packages, move the runtime libraries to
+    nvidia-libgl1{,-ia32}.  (Closes: #369316)
   * Rename package nvidia-glx-dev to nvidia-libgl1-dev (add dummy).
   * Let nvidia-libgl1 provide libgl1.  (Closes: #389971)
   * Introduce virtual package nvidia-glx, add Provides/Conflicts: nvidia-glx
