--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,5 @@
 nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
 
-  * TODO BEFORE UPLOAD:
-    - Can we just drop the libGL.so handling?
-    - Should we rename the nvidia-libgl1* packages again?
-    - Can we enable autobuilding of this non-free package?
-  * NOTE: Even if 256.xx is out, I'd like to get a release of 195.36.31 first
-    because I need this as a base for updating the legacy packages and 256.xx
-    changes the layout of the upstream tarball significantly.  Andreas
-
   [ Andreas Beckmann ]
   * New upstream release.
     - Drop patch NVIDIA_kernel-195.36.24-682377.diff, now included.
@@ -17,12 +9,13 @@ nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
     libGL.so.1 from the symbols file to ensure to generate a dependency on
     libgl1-mesa-glx | libgl1 only.  (Closes: #587091)
   * Split the nvidia-glx{,-ia32} packages, move the runtime libraries to
-    nvidia-libgl1{,-ia32}.  (Closes: #369316)
-  * Rename package nvidia-glx-dev to nvidia-libgl1-dev (add dummy).
-  * Introduce virtual package nvidia-glx, add Provides/Conflicts: nvidia-glx
-    to nvidia-glx, so that the legacy packages can do the same and we can stop
-    listing each variant we have in Conflicts and Recommends lists.
-    Same for nvidia-libgl1 and nvidia-glx-ia32.
+    libgl1-nvidia-glx{,-ia32}.  (Closes: #369316)
+  * Rename package nvidia-glx-dev to libgl1-nvidia-dev (add dummy package).
+  * Introduce virtual packages nvidia-glx{,-ia32}, libgl1-nvidia-glx{,-ia32},
+    libgl1-nvidia-dev.  Add a matching Provides/Conflicts: the the
+    corresponding real packages, so that the legacy packages can do the same
+    and we can stop listing each variant we have in Conflicts and Recommends
+    lists.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 23 Jun 2010 08:33:44 +0200
 
