--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
     corresponding real packages, so that the legacy packages can do the same
     and we can stop listing each variant we have in Conflicts and Recommends
     lists.
+  * Add Conflicts: fglrx-driver, fglrx-glx, fglrx-glx-ia32.
   * Update to Standards-Version: 3.9.0.  Not switching to Breaks+Replaces.
     Not touching old versioned Conflicts.  No other changes needed.
 
