--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
     and we can stop listing each variant we have in Conflicts and Recommends
     lists.
   * Add Conflicts: fglrx-driver, fglrx-glx, fglrx-glx-ia32.
+  * nvidia-glx: install HTML variant of the README, too.
   * Update to Standards-Version: 3.9.0.  Not switching to Breaks+Replaces.
     Not touching old versioned Conflicts.  No other changes needed.
 
