Rename the libnvidia-compiler1 packages to libnvidia-compiler.
The library is actually a (fairly huge) plugin used by libcuda1 (with the
same upstream version) only.  It has currently no SONAME and starting with
256.xx upstream will add a SONAME including the current upstream version.
To avoid renaming the package for every new upstream release the SOVERSION
will be dropped from the package name.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1222 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,12 @@ nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
   * nvidia-glx: install HTML variant of the README, too.
   * Update to Standards-Version: 3.9.0.  Not switching to Breaks+Replaces.
     Not touching old versioned Conflicts.  No other changes needed.
+  * Rename the libnvidia-compiler1 packages to libnvidia-compiler.  The
+    library is actually a (fairly huge) plugin used by libcuda1 (with the
+    same upstream version) only.  It has currently no SONAME and starting with
+    256.xx upstream will add a SONAME including the current upstream version.
+    To avoid renaming the package for every new upstream release the SOVERSION
+    will be dropped from the package name.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 23 Jun 2010 08:33:44 +0200
 
