--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,9 @@ nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
   * Update lintian-overrides and minor cleanup of the packaging scripts.
   * Clean up more carefully after the module build.
   * Move diversions to /usr/lib{,32}/nvidia/diversions.
+  * Remove possible LEGACY part from virtual package name
+    nvidia-kernel-NVIDIAVERSION (provided by the kernel module).
+  * Add a new substvar for marking the special driver from the NVIDIA Perfkit.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 23 Jun 2010 08:33:44 +0200
 
