add helper script to extract the supported PCI IDs from nv-kernel.o
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1361 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,9 @@ nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
   * Remove possible LEGACY part from virtual package name
     nvidia-kernel-NVIDIAVERSION (provided by the kernel module).
   * Add a new substvar for marking the special driver from the NVIDIA Perfkit.
+  * Add helper script debian/extract-pci-ids.sh to extract the PCI IDs of
+    supported devices from nv-kernel.o.  Based on the nvidia_supported script
+    found in Ubuntu's nvidia-current package.  Refresh nv-kernel.ids.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 23 Jun 2010 08:33:44 +0200
 
