Create /usr/lib/nvidia/diversions in libgl1-nvidia-glx postinst
* The old nvidia-glx postrm would remove /usr/lib/nvidia/diversions out
  from under us, so ensure that it exists in the postinst of
  libgl1-nvidia-glx before creating diversions.


git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1410 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,9 @@ nvidia-graphics-drivers (195.36.31-1) UNRELEASED; urgency=low
   [ Russ Allbery ]
   * Fix determination of the package name in nvidia-kernel-source when
     generating *.changes files.  (Closes: #589949)
+  * The old nvidia-glx postrm would remove /usr/lib/nvidia/diversions out
+    from under us, so ensure that it exists in the postinst of
+    libgl1-nvidia-glx before creating diversions.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 10 Aug 2010 13:30:47 +0200
 
