--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ nvidia-graphics-drivers (195.36.31-2) UNRELEASED; urgency=low
   * Move trigger and maintainer scripts handling the diversions/alternatives
     of the libGL.so* from MESA to separate packages that can be used by the
     legacy packages, too: libgl1-nvidia-alternatives{,-ia32}.
+  * Update lintian-overrides.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 20 Aug 2010 23:15:21 -0500
 
