--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (195.36.31-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (195.36.31-2) unstable; urgency=low
 
   [ Andreas Beckmann ]
   * Move trigger and maintainer scripts handling the diversions/alternatives
@@ -7,7 +7,7 @@ nvidia-graphics-drivers (195.36.31-2) UNRELEASED; urgency=low
   * Handle ia32 alternatives of libGL.so* via trigger, too.
   * Update lintian-overrides.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Fri, 20 Aug 2010 23:15:21 -0500
+ -- Russ Allbery <rra@debian.org>  Sat, 21 Aug 2010 16:07:19 -0700
 
 nvidia-graphics-drivers (195.36.31-1) unstable; urgency=low
 
