Remove workaround for dpkg-divert bug #581544, fixed in dpkg 1.15.8.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1420 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nvidia-graphics-drivers (195.36.31-3) unstable; urgency=low
+
+  [ Andreas Beckmann ]
+  * Remove workaround for dpkg-divert bug #581544, fixed in dpkg 1.15.8.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 24 Aug 2010 19:27:52 +0200
+
 nvidia-graphics-drivers (195.36.31-2) unstable; urgency=low
 
   [ Andreas Beckmann ]
