Change handling of Xorg module libglx.so to use alternatives, too.  Move the diversion of libglx.so to new package libglx-nvidia-alternatives and use a trigger there to create the alternatives.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@1421 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ nvidia-graphics-drivers (195.36.31-3) unstable; urgency=low
 
   [ Andreas Beckmann ]
   * Remove workaround for dpkg-divert bug #581544, fixed in dpkg 1.15.8.
+  * Change handling of Xorg module libglx.so to use alternatives, too.  Move
+    the diversion of libglx.so to new package libglx-nvidia-alternatives and
+    use a trigger there to create the alternatives.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 24 Aug 2010 19:27:52 +0200
 
