--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ nvidia-graphics-drivers (195.36.31-3) unstable; urgency=low
     the diversion of libglx.so to new package libglx-nvidia-alternatives and
     use a trigger there to create the alternatives.
   * Divert the debug symbols of libglx.so from Xorg, too.
+  * Update main and module source packages to debhelper 8.
+    - dh_makeshlibs automatically picks up libraries in /usr/lib/nvidia etc.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 24 Aug 2010 19:27:52 +0200
 
